# RTAB-map_airsim

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: config.ini  params.yaml  topics.rviz
docs/: Error_history.md  commands.md  error_history.md
launch/: rtabmap_airsim.launch  test.launch
scripts/: basic connection.py  basic_connection_ngrok.py  config.ini  connect_API.py  depth_image.npy  execute_bash.sh  image_type_test.py  tempCodeRunnerFile.py  test.py  test_airsim.py  test_socket.py  time real control.py
src/drone_slam_simulation/: connect_API_src.py  connect_api.py  get_topics.py  move_dron.py  publish_topics.py
test_scripts/: airsim_wrapper.py  contenedor_SLAM.py  image_type_test.py  print_args.py  test.py  test_airsim.py
